<?xml version="1.0"?><package>
  <name>communication_node</name>
  <version>0.1.0</version>
  <description>The communication_node package</description>

  <maintainer email="hoseingohari76@gmail.com">hosein</maintainer>
  <license>BSD 3-clause</license>
  <url type="website">http://www.crlab.ml/</url>
  <author email="hoseingohari76@gmail.com">hosein</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>

  </export>
</package>
