<?xml version="1.0"?>
<package>
  <name>gazebo_information_plugins</name>
  <version>0.0.0</version>
  <description>The gazebo_information_plugins package</description>


  <maintainer email="mhgoharinejad@gmail.com">Hossein76</maintainer>
  <author email="mhgoharinejad@gmail.com">Hossein76</author>
  <url type="website">http://crlab.ml</url>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>libgazebo7-dev</build_depend>
  <build_depend>gazebo_plugins</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_plugins</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
